# oxitime

./: AGENTS.md  Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs
src/config/: config_args.rs  config_file.rs  mod.rs
src/sync/: mod.rs  toggl.rs
src/timer/: mod.rs  timer_alarm.rs  timer_display.rs
src/toggl/: mod.rs  toggl_api.rs
