[package]
name = "oxitime"
version = "0.1.0"
edition = "2021"
description = "Oxitime is a fast, minimal, and terminal-native Pomodoro time tracker built with the Rust programming language."

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
notify-rust = "4.11.7"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rodio = "0.20.1"
