[package]
name = "oxitime"
version = "0.1.0"
edition = "2021"
description = "Oxitime is a fast, minimal, and terminal-native Pomodoro time tracker built with the Rust programming language."
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
humantime = "2.2.0"
humantime-serde = "1.1.1"
notify-rust = "4.11.7"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rodio = "0.20.1"
serde = "1.0.219"
toml = "0.8.22"
